# router-compose-test

./: .gitignore  README.md  compose.wac
auth/: Cargo.toml
auth/src/: bindings.rs  lib.rs
auth/wit/: world.wit
greet/: Cargo.toml
greet/src/: bindings.rs  lib.rs
greet/wit/: world.wit
router2/: Cargo.toml
router2/src/: bindings.rs  lib.rs
router2/wit/: world.wit
